--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sequoia Login</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="https://pratyushseq.github.io/azure-template/styles.css">
   </head>
   <body>
 
     <div class="page-wrapper">
 
       <div class="image-wrapper">
-        <img src="/assets/home-bg.png" alt="home-bg">
+        <img src="https://pratyushseq.github.io/azure-template/assets/home-bg.png" alt="home-bg">
       </div>
 
       <div class="form-wrapper">
