--- a/testing.html
+++ b/testing.html
@@ -16,6 +16,10 @@
     />
   </head>
   <style>
+    body {
+      width: max-content;
+      overflow: auto;
+    }
     .page-wrapper {
       width: auto;
       flex-wrap: nowrap;
@@ -79,6 +83,7 @@
       </div>
     </footer>
 
+    <script src="testing.js"></script>
     <script>
       const remoteUrl = "https://pratyushseq.github.io/azure-template";
       const localUrl = "http://localhost:8080";
@@ -90,8 +95,11 @@
           el.dataset[el.dataset.replace].replace("__URL__", url)
         );
       });
+
+      document.querySelectorAll(".helpLink.tiny").forEach((el) => {
+        el.parentNode.querySelector("label").appendChild(el);
+      });
     </script>
-    <script src="testing.js"></script>
   </body>
 </html>
 
