--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
       data-replace="href"
       data-href="__URL__/styles.css"
       href="https://pratyushseq.github.io/azure-template/styles.css"
+      data-preload="true"
     />
     <link
       rel="stylesheet"
       href="https://i.icomoon.io/public/9f58f18535/SequoiaIcons/style.css"
+      data-preload="true"
     />
   </head>
   <body>
@@ -93,8 +95,8 @@
         );
       });
 
-      document.querySelectorAll('.helpLink.tiny').forEach(el => {
-        el.parentNode.querySelector('label').appendChild(el);
+      document.querySelectorAll(".helpLink.tiny").forEach((el) => {
+        el.parentNode.querySelector("label").appendChild(el);
       });
     </script>
   </body>
