isolate script.js

--- a/index.html
+++ b/index.html
@@ -83,22 +83,12 @@
       </div>
     </footer>
 
-    <script>
-      const remoteUrl = "https://pratyushseq.github.io/azure-template";
-      const localUrl = "http://localhost:8080";
-      const url =
-        window.location.hostname === "localhost" ? localUrl : remoteUrl;
-      document.querySelectorAll("[data-replace]").forEach((el) => {
-        el.setAttribute(
-          el.dataset.replace,
-          el.dataset[el.dataset.replace].replace("__URL__", url)
-        );
-      });
-
-      document.querySelectorAll(".helpLink.tiny").forEach((el) => {
-        el.parentNode.querySelector("label").appendChild(el);
-      });
-    </script>
+    <script
+      src="https://pratyushseq.github.io/azure-template/script.js"
+      data-preload="true"
+      data-replace="src"
+      data-src="__URL__/script.js"
+    ></script>
   </body>
 </html>
 
