--- a/src/testing.html
+++ b/src/testing.html
@@ -27,7 +27,7 @@
   </style>
   <body>
     <div class="page-wrapper"></div>
-    
+    <script src="/src/testing.js"></script>
     {{SCRIPTS}}
   </body>
 </html>
