change image link to sequoia cdn

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div class="page-wrapper">
       <div class="image-wrapper">
         <img
-          src="https://login.sequoia.com/static/media/home-bg.dec29f55.png"
+          src="https://media.sequoia.com/public/utility-logos/seq.png"
           alt="home-bg"
         />
       </div>
