--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ footer .links a {
     <div class="page-wrapper">
       <div class="image-wrapper">
         <img
-          src="https://login.sequoia.com/static/media/home-bg.dec29f55.png"
+          src="https://media.sequoia.com/public/utility-logos/seq.png"
           alt="home-bg"
         />
       </div>
