--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,21 @@
       </div>
 
       <div class="form-wrapper">
-        <div id="api" class="form"></div>
+        <div class="form">
+          <img
+            src="https://media.sequoia.com/public/logo_dark.svg"
+            alt="company-logo"
+            id="logo"
+          />
+          <h2 class="header">Login</h2>
+          <div id="api"></div>
+          <a
+            href="https://login-web-dev.sequoia-development.com/forgot"
+            class="forgot"
+          >
+            Forgot Password
+          </a>
+        </div>
       </div>
     </div>
 
@@ -78,3 +92,4 @@
     {{SCRIPTS}}
   </body>
 </html>
+
