--- a/stage/index.html
+++ b/stage/index.html
@@ -9,7 +9,8 @@
       href="https://i.icomoon.io/public/9f58f18535/SequoiaIcons/style.css"
       data-preload="true"
     />
-    <style>* {
+    <style>
+    * {
   box-sizing: border-box;
   min-width: 0;
 }
@@ -394,7 +395,8 @@ h1 {
 
 #logo {
   height: 35px;
-}</style>
+}
+    </style>
   </head>
   <body>
     <div class="page-wrapper">
@@ -474,7 +476,8 @@ h1 {
       </div>
     </footer>
 
-    <script>document.querySelectorAll(".helpLink.tiny").forEach((el) => {
+    <script>
+    document.querySelectorAll(".helpLink.tiny").forEach((el) => {
   el.parentNode.querySelector("label").appendChild(el);
 });
 
@@ -518,7 +521,8 @@ fetch(url, {
     console.error(err);
   });
 
-</script>
+
+    </script>
   </body>
 </html>
 
