--- a/src/testing.html
+++ b/src/testing.html
@@ -9,6 +9,8 @@
       href="https://i.icomoon.io/public/9f58f18535/SequoiaIcons/style.css"
     />
     {{STYLES}}
+    <script src="/src/testing.js" defer></script>
+    {{SCRIPTS}}
   </head>
   <style>
     body {
@@ -27,8 +29,6 @@
   </style>
   <body>
     <div class="page-wrapper"></div>
-    <script src="/src/testing.js"></script>
-    {{SCRIPTS}}
   </body>
 </html>
 
