--- a/stage/idp/index.html
+++ b/stage/idp/index.html
@@ -17,6 +17,7 @@
         document.getElementById(idp)?.click();
       }
       document.addEventListener("DOMContentLoaded", init, false);
+      init();
     </script>
   </head>
   <body>
