--- a/production/index.html
+++ b/production/index.html
@@ -446,7 +446,6 @@ h1 {
 }
 
 document.addEventListener("DOMContentLoaded", init, false);
-init();
 
 
     </script>
@@ -528,6 +527,7 @@ init();
         ></a>
       </div>
     </footer>
+    <div onload="init()"></div>
   </body>
 </html>
 
