--- a/src/idp.html
+++ b/src/idp.html
@@ -17,11 +17,11 @@
         document.getElementById(idp)?.click();
       }
       document.addEventListener("DOMContentLoaded", init, false);
-      init();
     </script>
   </head>
   <body>
     <div id="api"></div>
+    <div onload="init()"></div>
   </body>
 </html>
 
