--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,9 @@
       href="https://i.icomoon.io/public/9f58f18535/SequoiaIcons/style.css"
       data-preload="true"
     />
-    {{STYLES}}
-    {{SCRIPTS}}
+    {{STYLES}} {{SCRIPTS}}
   </head>
-  <body>
+  <body onload="init()">
     <div class="page-wrapper">
       <div class="image-wrapper">
         <img
@@ -89,7 +88,6 @@
         ></a>
       </div>
     </footer>
-    <div onload="init()"></div>
   </body>
 </html>
 
