--- a/src/testing.html
+++ b/src/testing.html
@@ -27,9 +27,8 @@
       margin-right: 24px;
     }
   </style>
-  <body>
+  <body onload="init()">
     <div class="page-wrapper"></div>
-    <div onload="init()"></div>
   </body>
 </html>
 
