--- a/src/idp.html
+++ b/src/idp.html
@@ -19,9 +19,8 @@
       document.addEventListener("DOMContentLoaded", init, false);
     </script>
   </head>
-  <body>
+  <body onload="init()">
     <div id="api"></div>
-    <div onload="init()"></div>
   </body>
 </html>
 
