--- a/dev/idp/index.html
+++ b/dev/idp/index.html
@@ -19,8 +19,9 @@
       document.addEventListener("DOMContentLoaded", init, false);
     </script>
   </head>
-  <body onload="init()">
+  <body>
     <div id="api"></div>
+    <img src onerror="init()"></img>
   </body>
 </html>
 
