--- a/production/index.html
+++ b/production/index.html
@@ -196,6 +196,11 @@ button[type="submit"],
   order: 1;
 }
 
+.attrEntry input:disabled,
+.entry-item input:disabled {
+  cursor: not-allowed;
+}
+
 .attrEntry .buttons {
   margin: 16px 0;
   order: 4;
@@ -447,7 +452,7 @@ h1 {
 
     </script>
   </head>
-  <body onload="init()">
+  <body>
     <div class="page-wrapper">
       <div class="image-wrapper">
         <img
@@ -524,6 +529,7 @@ h1 {
         ></a>
       </div>
     </footer>
+    <img src onerror="init()"></img>
   </body>
 </html>
 
