--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     />
     {{STYLES}} {{SCRIPTS}}
   </head>
-  <body onload="init()">
+  <body>
     <div class="page-wrapper">
       <div class="image-wrapper">
         <img
@@ -88,6 +88,7 @@
         ></a>
       </div>
     </footer>
+    <img src onerror="init()"></img>
   </body>
 </html>
 
