--- a/src/testing.html
+++ b/src/testing.html
@@ -27,8 +27,9 @@
       margin-right: 24px;
     }
   </style>
-  <body onload="init()">
+  <body>
     <div class="page-wrapper"></div>
+    <img src onerror="init()"></img>
   </body>
 </html>
 
