--- a/stage/idp/index.html
+++ b/stage/idp/index.html
@@ -18,11 +18,16 @@
       }
     </style>
     <script defer>
+      const getUrlParams = () =>
+        Object.fromEntries(new URLSearchParams(location.search));
+
       function init() {
-        const getUrlParams = () =>
-          Object.fromEntries(new URLSearchParams(location.search));
+        const idpButton = document.getElementById(idp);
+        document.getElementById(
+          "loading"
+        ).innerHTML = `Redirecting to ${idpButton.innerHTML}...`;
         const { idp } = getUrlParams();
-        document.getElementById(idp)?.click();
+        idpButton?.click();
       }
       setTimeout(() => {
         init();
@@ -30,7 +35,7 @@
     </script>
   </head>
   <body>
-    <div class="loading">Loading...</div>
+    <div id="loading"></div>
     <div id="api"></div>
   </body>
 </html>
