email field shows now instead of username

--- a/dev/index.html
+++ b/dev/index.html
@@ -40,7 +40,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .image-wrapper {
@@ -75,14 +75,23 @@ a {
   overflow-wrap: break-word;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .form {
-  /* min-height: 600px; */
   width: 460px;
   background: #eee;
   border-radius: 4px;
   border: 1px solid #ddd;
   background: #fcfcfc;
   padding: 50px;
+  animation: fadeIn 200ms ease-in;
 }
 
 h2,
@@ -129,7 +138,6 @@ button[type="submit"],
 .divider,
 .intro,
 /* .entry .entry-item:first-of-type, */
-#forgotPassword,
 .create {
   display: none;
 }
@@ -414,9 +422,27 @@ h1 {
 
   const { login_hint, email } = getUrlParams();
 
-  if (location.pathname === "/testing/" && document.getElementById("UserId")) {
+  if (location.hostname === "localhost" && document.getElementById("UserId")) {
     document.getElementById("UserId").value = decodeURIComponent(login_hint);
   }
+
+  // create a label called "Email" and input with id "email" and append to UserId field
+  const emailLabel = document.createElement("label");
+  emailLabel.setAttribute("for", "email");
+  emailLabel.textContent = "Email";
+  const emailInput = document.createElement("input");
+  emailInput.setAttribute("type", "email");
+  emailInput.setAttribute("id", "email");
+  emailInput.setAttribute("value", email);
+  emailInput.setAttribute("disabled", "disabled");
+
+  document.getElementById("UserId").parentNode.appendChild(emailLabel);
+  document.getElementById("UserId").parentNode.appendChild(emailInput);
+
+  document.querySelector('label[for="UserId"]').style.display = "none";
+  document.getElementById("UserId").style.display = "none";
+
+  document.querySelector('.form').style.visibility = "visible";
 
   console.log({ login_hint, email });
 
@@ -451,7 +477,9 @@ h1 {
 
 setTimeout(() => {
   init();
-}, 500);
+}, 100);
+
+
     </script>
   </head>
   <body>
@@ -464,7 +492,7 @@ setTimeout(() => {
       </div>
 
       <div class="form-wrapper">
-        <div class="form">
+        <div class="form" style="visibility: hidden">
           <img
             src="https://media.sequoia.com/public/logo_dark.svg"
             alt="company-logo"
@@ -472,12 +500,6 @@ setTimeout(() => {
           />
           <h2 class="header">Login</h2>
           <div id="api"></div>
-          <a
-            href="https://login-web-dev.sequoia-development.com/forgot"
-            class="forgot"
-          >
-            Forgot Password
-          </a>
         </div>
       </div>
     </div>
