--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="form-wrapper">
-        <div class="form">
+        <div class="form" style="visibility: hidden">
           <img
             src="https://media.sequoia.com/public/logo_dark.svg"
             alt="company-logo"
@@ -29,12 +29,6 @@
           />
           <h2 class="header">Login</h2>
           <div id="api"></div>
-          <a
-            href="https://login-web-dev.sequoia-development.com/forgot"
-            class="forgot"
-          >
-            Forgot Password
-          </a>
         </div>
       </div>
     </div>
