--- a/production/forgot/index.html
+++ b/production/forgot/index.html
@@ -309,23 +309,32 @@ ul {
 
 .verificationInfoText {
   color: #00B0B3;
-  margin-bottom: 16px;
   font-size: 14px;
   font-weight: 500;
+}
+
+.verificationInfoText > div {
+  margin-bottom: 16px;
 }
 
 .verificationSuccessText {
   color: #11AB45;
-  margin-bottom: 16px;
   font-size: 14px;
   font-weight: 500;
 }
 
+.verificationSuccessText > div {
+  margin-bottom: 16px;
+}
+
 .verificationErrorText {
   color: #E42121;
-  margin-bottom: 16px;
   font-size: 14px;
   font-weight: 500;
+}
+
+.verificationErrorText > div {
+  margin-bottom: 16px;
 }
 
 footer {
@@ -408,9 +417,26 @@ h1 {
 
 #logo {
   height: 35px;
+}.attrEntry > a.helpLink.tiny {
+  display: none;
 }
     </style> <script defer>
-    
+    const init = () => {
+  const getUrlParams = () =>
+    Object.fromEntries(new URLSearchParams(location.search));
+  const { login_hint, email } = getUrlParams();
+
+  document.querySelector(".form").style.visibility = "visible";
+
+  document.getElementById("UserId")?.setAttribute("value", login_hint);
+  document.getElementById("email")?.setAttribute("value", email);
+  document.getElementById("UserId")?.setAttribute("disabled", "disabled");
+  document.getElementById("email")?.setAttribute("disabled", "disabled");
+};
+
+setTimeout(init, 100);
+
+
     </script>
   </head>
   <body>
