--- a/stage/forgot/index.html
+++ b/stage/forgot/index.html
@@ -79,6 +79,7 @@ a {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -168,8 +169,12 @@ button[type="submit"],
 .entry-item {
   display: flex;
   flex-direction: column;
-  margin-bottom: 16px;
   position: relative;
+}
+
+.attrEntry:not(:last-child),
+.entry-item:not(:last-child) {
+  margin-bottom: 16px;
 }
 
 .attrEntry>* {
@@ -313,7 +318,7 @@ ul {
   font-weight: 500;
 }
 
-.verificationInfoText > div {
+.verificationInfoText>div {
   margin-bottom: 16px;
 }
 
@@ -323,7 +328,7 @@ ul {
   font-weight: 500;
 }
 
-.verificationSuccessText > div {
+.verificationSuccessText>div {
   margin-bottom: 16px;
 }
 
@@ -333,7 +338,7 @@ ul {
   font-weight: 500;
 }
 
-.verificationErrorText > div {
+.verificationErrorText>div {
   margin-bottom: 16px;
 }
 
@@ -417,8 +422,20 @@ h1 {
 
 #logo {
   height: 35px;
-}.attrEntry > a.helpLink.tiny {
+}
+
+#attributeList>ul {
+  margin-top: 0;
+}.attrEntry>a.helpLink.tiny {
   display: none;
+}
+
+#emailVerificationControl .verificationInfoText>div::after,
+#emailVerificationControl .verificationSuccessText>div::after,
+#emailVerificationControl .verificationErrorText>div::after {
+  content: '';
+  margin-bottom: 24px;
+  display: block;
 }
     </style> <script defer>
     const init = () => {
@@ -432,9 +449,17 @@ h1 {
   document.getElementById("email")?.setAttribute("value", email);
   document.getElementById("UserId")?.setAttribute("disabled", "disabled");
   document.getElementById("email")?.setAttribute("disabled", "disabled");
+
+  document.getElementById("UserId_label").style.display = "none";
+  document.getElementById("UserId").style.display = "none";
+
+  document.getElementById("emailVerificationControl_but_send_code").click();
 };
 
 setTimeout(init, 100);
+
+
+
 
 
     </script>
