--- a/production/forgot/index.html
+++ b/production/forgot/index.html
@@ -454,12 +454,11 @@ h1 {
   document.getElementById("UserId").style.display = "none";
 
   document.getElementById("emailVerificationControl_but_send_code").click();
+  document.getElementById("emailVerificationControl_but_send_code").innerText =
+    "Sending...";
 };
 
 setTimeout(init, 100);
-
-
-
 
 
     </script>
