--- a/stage/forgot/index.html
+++ b/stage/forgot/index.html
@@ -443,6 +443,10 @@ h1 {
   margin-bottom: 24px;
   display: block;
 }
+
+#cancel {
+  display: none;
+}
     </style> <script defer>
     const init = () => {
   const getUrlParams = () =>
@@ -459,7 +463,7 @@ h1 {
   document.getElementById("UserId_label").style.display = "none";
   document.getElementById("UserId").style.display = "none";
 
-  document.getElementById("emailVerificationControl_but_send_code").click();
+  // document.getElementById("emailVerificationControl_but_send_code").click();
   document.getElementById("emailVerificationControl_but_send_code").innerText =
     "Sending...";
 };
