--- a/production/forgot/index.html
+++ b/production/forgot/index.html
@@ -448,7 +448,17 @@ h1 {
   display: none;
 }
     </style> <script defer>
-    const init = () => {
+    const isCodeInputAvailable = (callback) => {
+  const isAvailable = !!document.getElementById("emailVerificationCode");
+  const interval = setInterval(() => {
+    if (isAvailable) {
+      clearInterval(interval);
+      callback();
+    }
+  }, 100);
+};
+
+const init = () => {
   const getUrlParams = () =>
     Object.fromEntries(new URLSearchParams(location.search));
   const { login_hint, email } = getUrlParams();
@@ -463,9 +473,13 @@ h1 {
   document.getElementById("UserId_label").style.display = "none";
   document.getElementById("UserId").style.display = "none";
 
-  // document.getElementById("emailVerificationControl_but_send_code").click();
-  document.getElementById("emailVerificationControl_but_send_code").innerText =
-    "Sending...";
+  document.getElementById("emailVerificationControl_but_send_code").click();
+  document.getElementById("continue").innerText = "Sending...";
+
+  isCodeInputAvailable(() => {
+    document.getElementById("email")?.setAttribute("disabled", "disabled");
+    document.getElementById("continue").innerText = "Continue";
+  });
 };
 
 setTimeout(init, 100);
