fix the verify code page

--- a/dev/forgot/index.html
+++ b/dev/forgot/index.html
@@ -449,7 +449,9 @@ h1 {
 }
     </style> <script defer>
     const isCodeInputAvailable = (callback) => {
-  const isAvailable = !!document.getElementById("emailVerificationCode");
+  const isAvailable = !!document.getElementById(
+    "emailVerificationControl_but_verify_code"
+  );
   const interval = setInterval(() => {
     if (isAvailable) {
       clearInterval(interval);
@@ -478,7 +480,7 @@ const init = () => {
 
   isCodeInputAvailable(() => {
     setTimeout(() => {
-      console.log('isCodeInputAvailable');
+      console.log("isCodeInputAvailable");
       document.getElementById("email")?.setAttribute("disabled", "disabled");
       document.getElementById("continue").innerText = "Continue";
     }, 100);
@@ -486,6 +488,7 @@ const init = () => {
 };
 
 setTimeout(init, 100);
+
 
 
     </script>
