--- a/dev/forgot/index.html
+++ b/dev/forgot/index.html
@@ -449,9 +449,9 @@ h1 {
 }
     </style> <script defer>
     const isCodeInputAvailable = (callback) => {
-  const isAvailable = !!document.getElementById(
-    "emailVerificationControl_but_verify_code"
-  );
+  const isAvailable =
+    document.getElementById("emailVerificationCode").parentNode.parentNode.style
+      .display !== "none";
   const interval = setInterval(() => {
     if (isAvailable) {
       clearInterval(interval);
@@ -488,7 +488,6 @@ const init = () => {
 };
 
 setTimeout(init, 100);
-
 
 
     </script>
