--- a/dev/forgot/index.html
+++ b/dev/forgot/index.html
@@ -449,10 +449,10 @@ h1 {
 }
     </style> <script defer>
     const isCodeInputAvailable = (callback) => {
-  const isAvailable =
-    document.getElementById("emailVerificationCode").parentNode.parentNode.style
-      .display !== "none";
   const interval = setInterval(() => {
+    const isAvailable =
+      document.getElementById("emailVerificationCode").parentNode.parentNode
+        .style.display !== "none";
     if (isAvailable) {
       clearInterval(interval);
       callback();
