--- a/dev/forgot/index.html
+++ b/dev/forgot/index.html
@@ -432,6 +432,11 @@ h1 {
 
 #attributeList>ul {
   margin-top: 0;
+}
+
+button[aria-disabled="true"] {
+  cursor: not-allowed;
+  opacity: 0.2;
 }.attrEntry>a.helpLink.tiny {
   display: none;
 }
@@ -485,6 +490,22 @@ const init = () => {
       document.getElementById("continue").innerText = "Continue";
     }, 100);
   });
+
+  document
+    .getElementById("emailVerificationControl_but_send_new_code")
+    .addEventListener("click", () => {
+      document.getElementById("continue").innerText = "Sending...";
+
+      isCodeInputAvailable(() => {
+        setTimeout(() => {
+          console.log("isCodeInputAvailable");
+          document
+            .getElementById("email")
+            ?.setAttribute("disabled", "disabled");
+          document.getElementById("continue").innerText = "Continue";
+        }, 100);
+      });
+    });
 };
 
 setTimeout(init, 100);
