padding and hide change email button

--- a/dev/forgot/index.html
+++ b/dev/forgot/index.html
@@ -398,6 +398,7 @@ footer .links a {
 
   .form-wrapper {
     width: 100%;
+    padding: 24px;
   }
 
   .form {
@@ -449,8 +450,8 @@ button[aria-disabled="true"] {
   display: block;
 }
 
-#cancel {
-  display: none;
+#cancel, #emailVerificationControl_but_change_claims {
+  display: none !important;
 }
     </style> <script defer>
     const isCodeInputAvailable = (callback) => {
